--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_storage: ^12.4.4
   image_picker: ^1.1.2
+  intl: ^0.20.2
+  u_credit_card: ^1.4.0
+  font_awesome_flutter: ^10.8.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -64,10 +68,25 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/cimsocircle.jpeg
-      - assets/images/cimso.jpeg
-      - assets/images/img.png
-      - assets/images/hotel.jpeg
+    - assets/images/cimsocircle.jpeg
+    - assets/images/cimso.jpeg
+    - assets/images/img.png
+    - assets/images/hotel.jpeg
+    - assets/images/golf.jpeg
+    - assets/images/restaurant.jpeg
+    - assets/images/flight.jpeg
+    - assets/images/luxury.jpeg
+    - assets/images/ocean.jpeg
+    - assets/images/mountain.jpeg
+    - assets/images/skyline.jpeg
+    - assets/images/paradise.jpeg
+    - assets/images/city.jpeg
+    - assets/images/historic.jpeg
+    - assets/images/sandy.jpeg
+    - assets/images/royal.jpeg
+    - assets/images/serene.jpeg
+    - assets/images/chip.png
+    - assets/images/chip1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
